# ChangeLog for sci-biology/tophat
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/tophat/ChangeLog,v 1.14 2015/04/07 14:35:24 jlec Exp $

  28 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  tophat-2.0.14.ebuild:
  sci-biology/tophat: try to introduce all-recursive target to make upstream
  'make all' call happy

  17 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> tophat-1.0.12.ebuild:
  Non-maintainer commit: fix building, approved by Justin Lecher

*tophat-2.0.9 (06 Mar 2014)

  06 Mar 2014; Justin Lecher <jlec@gentoo.org> +tophat-2.0.9.ebuild,
  +files/tophat-2.0.9-flags.patch:
  Version Bump, #502532; thanks José María Fernández González for the new
  ebuild

*tophat-2.0.8 (13 Mar 2013)

  13 Mar 2013; Justin Lecher <jlec@gentoo.org> +tophat-2.0.8.ebuild,
  +files/tophat-2.0.8-flags.patch:
  Version Bump; unbundle sci-biology/seqan

  12 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Drop Andrey as maintainer so that bugs get assigned to sci-biology directly

*tophat-2.0.2 (19 Jul 2012)

  19 Jul 2012; Justin Lecher <jlec@gentoo.org> tophat-2.0.0.ebuild,
  +tophat-2.0.2.ebuild, +files/tophat-2.0.2-flags.patch, metadata.xml:
  Version Bump; do parallel builds; handle debug build

  25 Apr 2012; Justin Lecher <jlec@gentoo.org> tophat-1.0.12.ebuild,
  tophat-1.4.1.ebuild, tophat-2.0.0.ebuild:
  Drop unnessecary die

*tophat-2.0.0 (15 Apr 2012)

  15 Apr 2012; Andrey Kislyuk <weaver@gentoo.org> -tophat-1.3.3.ebuild,
  +tophat-2.0.0.ebuild:
  version bump

*tophat-1.4.1 (04 Feb 2012)
*tophat-1.3.3 (04 Feb 2012)

  04 Feb 2012; Andrey Kislyuk <weaver@gentoo.org> -tophat-1.3.2.ebuild,
  +tophat-1.3.3.ebuild, +tophat-1.4.1.ebuild:
  version bump

  04 Feb 2012; Andrey Kislyuk <weaver@gentoo.org> tophat-1.3.2.ebuild:
  filter as-needed

*tophat-1.3.2 (26 Sep 2011)

  26 Sep 2011; Andrey Kislyuk <weaver@gentoo.org> +tophat-1.3.2.ebuild:
  Version bump
